# 42-libft

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  ft_atoi.c  ft_calloc.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_my_putbase.c  ft_my_putchar.c  ft_my_putnbr.c  ft_my_putpointer.c  ft_my_putstr.c  ft_my_unsigned_putnbr.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_startwith.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  (+13 more)
